--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ a {
 .section {
     margin-top: 40px;
 }
+.projecto img{
+    width: 500px;
+}
 #titulo {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -108,4 +111,7 @@ a {
 }
 #leng {
     text-align: center;
+}
+#codi {
+    height: 260px
 }
